# veripy

./: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
docs/: DISCUSS.md  ENGINES.md  EXTENDED_FEATURES.md  FEATURE_SUPPORT.md
examples/: array_store_select.py  ensure_decorator.py  error_reporting.py  extended_features_demo.py  prototype.py  user_friendly_api.py
tests/: conftest.py  test_auto_active.py  test_prototype.py
tests/comprehensive/: README.md  __init__.py  test_auto_active_features.py  test_dafny_verus_patterns.py  test_extended_features.py  test_python_features.py
tests/unit/: README.md  test_advanced_python_features.py  test_extended_features.py  test_extended_python_features.py
tests/unit/algorithms/: test_prefix_sum.py  test_search_algorithms.py  test_sorting_algorithms.py  test_string_algorithms.py  test_two_pointers.py
tests/unit/control_flow/: test_control_flow.py  test_iteration.py  test_loop_control.py  test_loop_invariants.py  test_loops.py
tests/unit/core/: test_auto_active_engine.py  test_auto_active_integration.py  test_builtin_translation.py  test_error_reporting.py  test_syntax_exports.py  test_type_system.py  test_z3_translation.py
tests/unit/data_types/: test_array_manipulation.py  test_arrays.py  test_classes.py  test_data_types.py  test_dataclasses.py  test_dict_expressions.py  test_dictionary_operations.py  test_set_expressions.py  test_set_operations.py  test_string_expressions.py  test_string_operations.py  test_structures.py
tests/unit/edge_cases/: test_cases.py  test_counter.py  test_edge_cases.py
tests/unit/expressions/: test_augmented_assignments.py  test_bit_manipulation.py  test_builtin_functions.py  test_builtins.py  test_calls.py  test_expressions.py  test_field_access.py  test_mathematical_properties.py  test_method_calls.py  test_oop_expressions.py  test_statements.py
tests/unit/integration/: test_automatic_inference.py  test_expression_integration.py  test_extended_combinations.py
tests/unit/language_features/: test_async.py  test_comprehensions.py  test_context_managers.py  test_decorators.py  test_exceptions.py  test_fstrings.py  test_functions.py  test_generators.py  test_imports.py  test_lambdas.py  test_list_comprehension.py  test_match.py  test_scopes.py  test_variable_arguments.py  test_walrus.py
tests/unit/soundness/: test_heap_calls.py  test_heap_semantics.py  test_soundness_regressions.py
tests/unit/verification/: test_advanced_quantifiers.py  test_decreases.py  test_frame_conditions.py  test_frames.py  test_lemmas.py  test_quantifiers.py  test_quantifiers_comprehensive.py  (+3 more)
veripy/: __init__.py
veripy/auto_active/: __init__.py  engine.py
veripy/cli/: __init__.py  config.py  extract.py  main.py  results.py  verification.py
veripy/core/: __init__.py  heap_lowering.py  prettyprint.py  runtime_config.py  transformer.py  verify.py
veripy/error/: __init__.py  reporter.py
veripy/parser/: ast_builder.py  parser.py  syntax.py
veripy/recursive/: __init__.py  verifier.py
veripy/typecheck/: __init__.py  refinement.py  type_check.py  types.py
(+23 files in other folders)
