[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "veripy"
version = "0.1.0"
description = "A production-ready auto-active verification system for Python programs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Veripy Team", email = "team@veripy.dev"}
]
maintainers = [
    {name = "Veripy Team", email = "team@veripy.dev"}
]
requires-python = ">=3.9"
dependencies = [
    "z3-solver>=4.8.12",
    "pyparsing>=3.0.0",
    "apronpy>=0.1.0",
    "rich>=12.0.0",
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "cached-property>=1.5.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Model Checking",
    "Topic :: Software Development :: Testing :: Formal Verification",
]

keywords = [
    "verification", "formal verification", "smt", "z3", "auto-active",
    "dafny", "verus", "python", "static analysis", "type checking",
    "program verification", "contract verification"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "Sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

docs = [
    "Sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

lsp = [
    "pygls>=1.0.0",
]

[project.scripts]
veripy = "veripy.cli.main:main"

[project.urls]
Homepage = "https://github.com/veripy/veripy"
Repository = "https://github.com/veripy/veripy"
Issues = "https://github.com/veripy/veripy/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_file = "veripy/_version.py"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["z3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["veripy"]
omit = ["tests/*", "veripy/_version.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
